<resources>
    <string name="app_name">Daily Task Scheduler</string>


    <!--activity_start-->
    <string name="daily_task_scheduler">Daily Task Scheduler</string>


    <!--activity_main-->

    <string name="daily_tasks">Daily Tasks</string>
    <string name="priority">Priority</string>
    <string name="add_new_task">Add New Task</string>

    <!--activity_add_item -->
    <string name="task_name">Task Name</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="due_time">Due Time</string>
    <string name="enter_due_time">Enter due time</string>
    <string name="task_note">Task Note</string>
    <string name="enter_task_note">Enter task note</string>
    <string name="task_priority">Task Priority</string>
    <string name="choose_task_priority">Choose task priority</string>
    <string name="task_status">Task Status</string>
    <string name="choose_task_status">Choose task status</string>
    <string name="add_task">Add Task</string>
    <string name="update_task">Update Task</string>

</resources>
